# motia-hack

./: .env  AGENTS.md  EXPAND_NODE_FIX.md  IMPLEMENTATION_SUMMARY.md  NODE_DEDUPLICATION.md  README.md  README_SETUP.md  REFACTORING_COMPLETE.md  motia-workbench.json  motia.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  types.d.ts
.cursor/plans/: knowledge_graph_chatbot_v2_14adff10.plan.md
frontend/: README.md  package-lock.json  package.json
middlewares/: __init__.py  timing_middleware.py  timing_wrapper.py
src/: __init__.py
src/api/: __init__.py  build_learning_path_step.py  chat-status.step.py  chat_status_step.py  chat_step.py  expand_node_step.py  generate_quiz_step.py  get_node_step.py  shopping_step.py  study_step.py
src/cron/: __init__.py  cleanup-state.cron.py  cleanup_state_step.py
src/events/: assign-levels.event.py  assign_levels_step.py  build-graph.event.py  build-learning-path.event.py  build_graph_step.py  build_learning_path_step.py  cluster-concepts.event.py  cluster_concepts_step.py  connect-cross-query.event.py  connect_cross_query_step.py  expand-node.event.py  expand_node_step.py  extract-concepts.event.py  extract-specs.event.py  extract_concepts_step.py  extract_specs_step.py  generate-embeddings.event.py  generate_embeddings_step.py  graph-ready.event.py  graph_ready_step.py  identify-prerequisites.event.py  identify_prerequisites_step.py  parse_shopping_query_step.py  search-products.event.py  search-references.event.py  search_products_step.py  search_references_step.py
src/hello/: hello_api_step.py  (+1 more)
(+41 files in other folders)
