[project]
name = "hack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "google-genai>=1.0.0",
    "pinecone>=5.0.0",
    "exa-py>=1.0.0",
    "scikit-learn>=1.5.0",
    "networkx>=3.0",
    "numpy>=2.0.0",
    "python-dotenv>=1.0.0",
]
